--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -12,7 +12,37 @@ name: release-please
 jobs:
   release-please:
     runs-on: ubuntu-latest
+    outputs:
+      test-package-a--release_created: ${{ steps.release.outputs.test-package-a--release_created}}
+      test-package-b--release_created: ${{ steps.release.outputs.test-package-b--release_created}}
     steps:
       - uses: googleapis/release-please-action@v4
+        id: release
         with:
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
+
+  publish-test-package-a:
+    if: ${{needs.release-please.outputs.test-package-a--release_created}}
+    runs-on: ubuntu-latest
+    needs: release-please
+    steps:
+      - uses: ./.github/workflows/init-pnpm
+
+      - name: Publish 🚀
+        shell: bash
+        run: pnpm publish packages/test-package-a --access public --no-git-checks
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  publish-test-package-b:
+    if: ${{needs.release-please.outputs.test-package-b--release_created}}
+    runs-on: ubuntu-latest
+    needs: release-please
+    steps:
+      - uses: ./.github/workflows/init-pnpm
+
+      - name: Publish 🚀
+        shell: bash
+        run: pnpm publish packages/test-package-b --access public --no-git-checks
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
