try to add changelog type

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,5 +7,6 @@
     "packages/test-package-b": {
       "release-type": "node"
     }
-  }
+  },
+  "changelog-types": [{ "type": "style", "section": "Styling" }]
 }
