chore: update changelog-types to changelog-sections

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -8,5 +8,5 @@
       "release-type": "node"
     }
   },
-  "changelog-types": [{ "type": "style", "section": "Styling" }]
+  "changelog-sections": [{ "type": "style", "section": "Styles" }]
 }
