--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -26,6 +26,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: release-please
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - uses: ./.github/workflows/init-pnpm.yml
 
       - name: Publish 🚀
@@ -39,6 +42,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: release-please
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - uses: ./.github/workflows/init-pnpm.yml
 
       - name: Publish 🚀
