--- a/.github/workflows/init-pnpm/action.yml
+++ b/.github/workflows/init-pnpm/action.yml
@@ -1,8 +1,5 @@
 name: Init pnpm
 
-on:
-  workflow_call: # Allows this workflow to be called from other workflows
-
 runs:
   using: "composite"
   steps:
@@ -21,3 +18,4 @@ runs:
 
     - name: Install dependencies
       run: pnpm install --frozen-lockfile
+      shell: bash
